# STMCmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: functions.cmake  sources.cmake
cubeMX/Core/Inc/: stm32f4xx_it.h
include/: main.h  stm32f4xx_hal_conf.h
src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
tools/: config.sh  convert.sh  old.cmake  upload.sh
